fix: Fix apps list on small screens

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -793,8 +793,19 @@ Optimize sidebar for mobile (Beta)
     font-size: 0px;
   }
   
-  
   .setting-content {
     padding: 10px;
+  }
+  .app {
+    padding: 10px 20px !important; 
+    margin-bottom: -10px !important;
+  }
+
+  .app i {
+    font-size: 2rem !important;
+    right: -0px !important;
+  }
+  .app span {
+    visibility: hidden !important;
   }
 }
